--- a/src/blocks/header/header.html
+++ b/src/blocks/header/header.html
@@ -31,13 +31,14 @@
     </ul>
     <label class="header__language-label">
       <input
+        id="language_checkbox"
         type="checkbox"
         name="language"
         class="header__language-checkbox"
       />
       <span class="header__language-pseudo-checkbox"></span>
-      <span class="header__language-label-text header__language-label-text_content_ru">RU</span>
-      <span class="header__language-label-text header__language-label-text_content_en">EN</span>
+      <span class="header__language-label-text header__language-label-text_content_ru notranslate" id="language_checkbox_ru" data-google-lang="ru">RU</span>
+      <span class="header__language-label-text header__language-label-text_content_en notranslate" data-google-lang="en">EN</span>
     </label>
     <ul class="header__social-list">
       <li class="header__social-list-item">
