--- a/src/blocks/lead/lead.html
+++ b/src/blocks/lead/lead.html
@@ -38,16 +38,22 @@
       </div>
     </div>
     <div class="lead__images">
-      <picture class="lead__image-wrap">
-        <source srcset="./images/base-view-theme-light.webp" type="image/webp" />
+      <picture class="lead__image-wrap" id="light_theme">
+        <source
+          srcset="./images/base-view-theme-light.webp"
+          type="image/webp"
+        />
         <img
           class="lead__image lead__image_content_light"
           src="./images/base-view-theme-light.png"
           alt="Стартовый экран приложения электронного меню. Светлая тема"
         />
       </picture>
-      <picture class="lead__image-wrap">
-        <source srcset="./images/base-view-theme-dark.webp" type="image/webp" />
+      <picture class="lead__image-wrap" id="dark_theme">
+        <source
+          srcset="./images/base-view-theme-dark.webp"
+          type="image/webp"
+        />
         <img
           class="lead__image lead__image_content_dark"
           src="./images/base-view-theme-dark.png"
