--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,6 +20,9 @@
 
     </div>
     <script src="./scripts/libs/splide.min.js"></script>
+    <script src="./scripts/libs/google-translate.js"></script>
+    <script src="./scripts/libs/js.cookie.min.js"></script>
+    <script src="./scripts/libs/element.js"></script>
     <script src="./scripts/main.js"></script>
   </body>
 </html>
