--- a/src/blocks/step/step.html
+++ b/src/blocks/step/step.html
@@ -9,6 +9,7 @@
         <li class="splide__slide">
           <article class="step__card">
             <div
+              id="step1_image"
               class="step__card-image"
               style="
                 background-image: url('./images/step__image-01.png');
@@ -35,6 +36,7 @@
         <li class="splide__slide">
           <article class="step__card">
             <div
+              id="step2_image"
               class="step__card-image"
               style="
                 background-image: url('./images/step__image-02.png');
@@ -65,6 +67,7 @@
         <li class="splide__slide">
           <article class="step__card">
             <div
+              id="step3_image"
               class="step__card-image"
               style="
                 background-image: url('./images/step__image-03.png');
