--- a/src/blocks/theme/theme.html
+++ b/src/blocks/theme/theme.html
@@ -18,7 +18,7 @@
         и конверсию.
       </p>
     </div>
-    <picture class="theme__card-image-wrap">
+    <picture class="theme__card-image-wrap" id="theme_light_theme">
       <source srcset="./images/base-view-theme-light.webp" type="image/webp" />
       <img
         class="theme__card-image"
@@ -40,7 +40,7 @@
         и привлечь внимание пользователей.
       </p>
     </div>
-    <picture class="theme__card-image-wrap">
+    <picture class="theme__card-image-wrap" id="theme_dark_theme">
       <source srcset="./images/base-view-theme-dark.webp" type="image/webp" />
       <img
         class="theme__card-image"
