add slider on mobile to features section, correct words

--- a/src/blocks/advantages/advantages.html
+++ b/src/blocks/advantages/advantages.html
@@ -47,7 +47,7 @@
               <h2 class="banner-card__title">Поддержка разных языков</h2>
               <div class="banner-card__description">
                 <p>
-                  У туристов возникают сложности из-за языкового барьера при заказе в ресторане, поэтому они отдают предпочтения тем заведениям, у которых меню содержит картинки с блюдами и есть меню на родном языке. Наше электронное меню решает эти проблемы!
+                  У туристов возникают сложности из-за языкового барьера при заказе в ресторане, поэтому они отдают предпочтения тем ресторанам, у которых меню содержит картинки с блюдами и есть меню на родном языке. Наше электронное меню решает эти проблемы!
                 </p>
               </div>
             </div>
@@ -122,7 +122,7 @@
               </h2>
               <div class="banner-card__description">
                 <p>
-                  Электронное меню поможет ресторану выделиться на фоне конкурентов и создать впечатление современного заведения, привлекающего внимание клиентов.
+                  Электронное меню поможет ресторану выделиться на фоне конкурентов и создать впечатление современного ресторана, привлекающего внимание клиентов.
                 </p>
               </div>
             </div>
