--- a/src/blocks/features/features.html
+++ b/src/blocks/features/features.html
@@ -1,129 +1,139 @@
 <!-- Особенности -->
-<section class="section" id="features">
+<section class="section section_no-indent features" id="features">
   <div class="section__indent">
     <h2 class="section__title">
       Особенности нашего <span class="text-decor">Qr‑меню</span>
     </h2>
-    <ul class="section__list section__three-columns">
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#time"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Быстрый старт</h3>
-          <div class="card__description">
-            <p>
-              Подключите за 15 минут без сложных настроек, покупки дорогого
-              оборудования и обучения персонала.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#menu"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Ни каких ограничений</h3>
-          <div class="card__description">
-            <p>
-              Заводите разные меню для каждого заведения, используйте уникальные
-              меню для бизнес ланчей и завтраков, создавайте различные категории
-              и подкатегории в меню.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#language"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Возможность выбора языка</h3>
-          <div class="card__description">
-            <p>Поможет привлечь больше клиентов среди туристов.</p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#colors"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Фирменный стиль</h3>
-          <div class="card__description">
-            <p>
-              Загрузите свой баннер и логотип, выберите цвет и дизайн страницы,
-              передайте гостям уникальную атмосферу заведения.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#theme"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Комфортная цветовая схема день/ночь</h3>
-          <div class="card__description">
-            <p>
-              Обеспечивает удобство восприятия информации, улучшает общее
-              впечатление от сайта.
-            </p>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="card card_theme_outline card_content_border">
-          <span class="card__icon">
-            <svg
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 102 102"
-            >
-              <use href="./images/icons.svg#images"></use>
-            </svg>
-          </span>
-          <h3 class="card__title">Добавляйте свои фото или используйте наши</h3>
-          <div class="card__description">
-            <p>
-              Добавляйте яркие и сочные фото для категорий и блюд или
-              используйте наши уникальные иконки, все это упростит гостям
-              навигацию по меню.
-            </p>
-          </div>
-        </article>
-      </li>
-    </ul>
+  </div>
+  <div
+    class="splide splide_transparent-arrows features__slider"
+    id="features-slider"
+    aria-label="Особенности нашего Qr‑меню"
+  >
+    <div class="splide__track">
+      <ul class="splide__list features__slider-list">
+        <li class="splide__slide">
+          <article class="card card_theme_outline card_content_border">
+            <span class="card__icon">
+              <svg
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 102 102"
+              >
+                <use href="./images/icons.svg#time"></use>
+              </svg>
+            </span>
+            <h3 class="card__title">Быстрый старт</h3>
+            <div class="card__description">
+              <p>
+                Подключите за 15 минут без сложных настроек, покупки дорогого
+                оборудования и обучения персонала.
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="splide__slide">
+          <article class="card card_theme_outline card_content_border">
+            <span class="card__icon">
+              <svg
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 102 102"
+              >
+                <use href="./images/icons.svg#menu"></use>
+              </svg>
+            </span>
+            <h3 class="card__title">Ни каких ограничений</h3>
+            <div class="card__description">
+              <p>
+                Заводите разные меню для каждого ресторана, используйте
+                уникальные меню для бизнес ланчей и завтраков, создавайте
+                различные категории и подкатегории в меню.
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="splide__slide">
+          <article class="card card_theme_outline card_content_border">
+            <span class="card__icon">
+              <svg
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 102 102"
+              >
+                <use href="./images/icons.svg#language"></use>
+              </svg>
+            </span>
+            <h3 class="card__title">Возможность выбора языка</h3>
+            <div class="card__description">
+              <p>Поможет привлечь больше клиентов среди туристов.</p>
+            </div>
+          </article>
+        </li>
+        <li class="splide__slide">
+          <article class="card card_theme_outline card_content_border">
+            <span class="card__icon">
+              <svg
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 102 102"
+              >
+                <use href="./images/icons.svg#colors"></use>
+              </svg>
+            </span>
+            <h3 class="card__title">Фирменный стиль</h3>
+            <div class="card__description">
+              <p>
+                Загрузите свой баннер и логотип, выберите цвет и дизайн
+                страницы, передайте гостям уникальную атмосферу ресторана.
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="splide__slide">
+          <article class="card card_theme_outline card_content_border">
+            <span class="card__icon">
+              <svg
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 102 102"
+              >
+                <use href="./images/icons.svg#theme"></use>
+              </svg>
+            </span>
+            <h3 class="card__title">Комфортная цветовая схема день/ночь</h3>
+            <div class="card__description">
+              <p>
+                Обеспечивает удобство восприятия информации, улучшает общее
+                впечатление от сайта.
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="splide__slide">
+          <article class="card card_theme_outline card_content_border">
+            <span class="card__icon">
+              <svg
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 102 102"
+              >
+                <use href="./images/icons.svg#images"></use>
+              </svg>
+            </span>
+            <h3 class="card__title">
+              Добавляйте свои фото или используйте наши
+            </h3>
+            <div class="card__description">
+              <p>
+                Добавляйте яркие и сочные фото для категорий и блюд или
+                используйте наши уникальные иконки, все это упростит гостям
+                навигацию по меню.
+              </p>
+            </div>
+          </article>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
