--- a/src/blocks/lead/lead.html
+++ b/src/blocks/lead/lead.html
@@ -7,7 +7,7 @@
           ><span class="text-decor">QR</span>‑меню</span
         >
         <span class="lead__title-span lead__title-span_size-sm"
-          >для заведений</span
+          >для ресторанов</span
         >
       </h1>
       <div class="lead__description">
