--- a/src/blocks/step/step.html
+++ b/src/blocks/step/step.html
@@ -45,7 +45,7 @@
               <p class="step__card-label-text">Шаг 2</p>
               <h3 class="step__card-title">Настройте</h3>
               <div class="step__card-description">
-                <p>Укажите название заведения, загрузите баннер</p>
+                <p>Укажите название ресторана, загрузите баннер</p>
               </div>
               <div class="step__card-progress">
                 <span
