fix path to default images

--- a/src/blocks/hiw/hiw.html
+++ b/src/blocks/hiw/hiw.html
@@ -99,28 +99,28 @@
       </ul>
       <div class="hiw__images">
         <picture class="hiw__image-wrap hiw__image-wrap_active" id="hiw1_image">
-          <source srcset="./images/hiw__image-01.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-01.png" alt="Экран приложения электронного меню - главная страница" />
+          <source srcset="./images/translate/ru/hiw__image-01.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/translate/ru/hiw__image-01.png" alt="Экран приложения электронного меню - главная страница" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw2_image">
-          <source srcset="./images/hiw__image-02.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-02.png" alt="Экран приложения электронного меню - страница с выбором блюд" />
+          <source srcset="./images/translate/ru/hiw__image-02.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/translate/ru/hiw__image-02.png" alt="Экран приложения электронного меню - страница с выбором блюд" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw3_image">
-          <source srcset="./images/hiw__image-03.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-03.png" alt="Экран приложения электронного меню - просмотр детального описания карточки блюда" />
+          <source srcset="./images/translate/ru/hiw__image-03.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/translate/ru/hiw__image-03.png" alt="Экран приложения электронного меню - просмотр детального описания карточки блюда" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw4_image">
           <source srcset="./images/hiw__image-04.webp" type="image/webp" />
           <img class="hiw__image" src="./images/hiw__image-04.png" alt="Экран приложения электронного меню - просмотр детальной картинки блюда" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw5_image">
-          <source srcset="./images/hiw__image-05.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-05.png" alt="Экран приложения электронного меню - страница оформления заказа" />
+          <source srcset="./images/translate/ru/hiw__image-05.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/translate/ru/hiw__image-05.png" alt="Экран приложения электронного меню - страница оформления заказа" />
         </picture>
         <picture class="hiw__image-wrap" id="hiw6_image">
-          <source srcset="./images/hiw__image-06.webp" type="image/webp" />
-          <img class="hiw__image" src="./images/hiw__image-06.png" alt="Экран приложения электронного меню - страница с успешным оформлением заказа" />
+          <source srcset="./images/translate/ru/hiw__image-06.webp" type="image/webp" />
+          <img class="hiw__image" src="./images/translate/ru/hiw__image-06.png" alt="Экран приложения электронного меню - страница с успешным оформлением заказа" />
         </picture>
       </div>
     </div>
