--- a/src/blocks/step/step.html
+++ b/src/blocks/step/step.html
@@ -12,8 +12,8 @@
               id="step1_image"
               class="step__card-image"
               style="
-                background-image: url('./images/step__image-01.png');
-                background-image: url('./images/step__image-01.webp');
+                background-image: url('./images/translate/ru/step__image-01.png');
+                background-image: url('./images/translate/ru/step__image-01.webp');
               "
             ></div>
             <div class="step__card-content">
@@ -39,8 +39,8 @@
               id="step2_image"
               class="step__card-image"
               style="
-                background-image: url('./images/step__image-02.png');
-                background-image: url('./images/step__image-02.webp');
+                background-image: url('./images/translate/ru/step__image-02.png');
+                background-image: url('./images/translate/ru/step__image-02.webp');
               "
             ></div>
             <div class="step__card-content">
@@ -70,8 +70,8 @@
               id="step3_image"
               class="step__card-image"
               style="
-                background-image: url('./images/step__image-03.png');
-                background-image: url('./images/step__image-03.webp');
+                background-image: url('./images/translate/ru/step__image-03.png');
+                background-image: url('./images/translate/ru/step__image-03.webp');
               "
             ></div>
             <div class="step__card-content">
